refactor: Make all split layouts responsive

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
     {{ .Content }}
 
 
-    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0">
+    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0 pf-u-pb-0">
       <div class="pf-c-page__main">
         <div class="pf-l-gallery pf-m-gutter pf-l-gallery--max-350">
           {{ range .Pages }}
@@ -13,7 +13,7 @@
                 class="pf-u-color-100 pf-x-m-no-decoration"
               >
                 <div
-                  class="pf-c-card pf-m-compact pf-m-hoverable-raised"
+                  class="pf-c-card pf-m-compact pf-m-hoverable-raised pf-u-h-100"
                 >
                   <div class="pf-c-card__header pf-u-p-0">
                     <div class="pf-c-card__header-main pf-c-card__header-main--fluid">
