--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="pf-c-page__main-body pf-u-px-md pf-u-px-0-on-lg pf-u-py-lg">
+<div class="pf-c-page__main-body pf-u-px-lg pf-u-px-0-on-xl pf-u-py-lg">
   <div class="pf-l-flex pf-m-justify-content-space-between pf-x-c-footer--max-width">
     <div class="pf-l-flex__item">
       <a href="{{ .Site.Params.Meta.Source }}" target="_blank" rel="noopener" class="pf-x-m-no-highlight--dark"
