--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,51 +38,42 @@
       >
 
       {{ block "header" . }}
-        <header class="pf-c-page__header pf-c-page__header--max-width pf-x-u-blur pf-c-page__header--overlay pf-u-box-shadow-sm-bottom pf-u-pr-md">
-          <div class="pf-c-page__header-tools pf-c-page__header-tools--max-width">
-            <div class="pf-c-page__header-brand pf-u-pl-0">
+        <header class="pf-c-page__header pf-c-page__header--max-width pf-x-u-blur pf-c-page__header--overlay pf-u-box-shadow-sm-bottom pf-x-u-white-space-nowrap pf-x-u-overflow-x-auto">
+          <div class="pf-c-page__header__content--max-width">
+            <a
+              class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration pf-c-avatar--hover pf-u-pl-2xl pf-u-pl-sm-on-xl"
+              href="{{ .Site.BaseURL }}"
+            >
+              <img
+                src="{{ .Site.Data.person.img }}"
+                alt="Profile picture of {{ .Site.Data.person.name }}"
+                class="pf-c-avatar pf-u-mr-md pf-c-avatar--navbar"
+              />
+              <div>
+                <h2 class="pf-u-font-size-sm">{{ .Site.Data.person.name }}</h2>
+                <h1 class="pf-u-font-size-md pf-u-font-weight-bold pf-x-u-navbar__title">
+                  {{ .Title }}
+                </h1>
+              </div>
+            </a>
+
+            <div class="pf-u-display-flex pf-u-align-items-center pf-u-pr-2xl pf-u-pr-0-on-xl">
               <a
-                class="pf-c-page__header-brand-link pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-c-page__header-brand-link--no-decoration"
-                href="{{ .Site.BaseURL }}"
-                ><img
-                  src="{{ .Site.Data.person.img }}"
-                  alt="Profile picture of {{ .Site.Data.person.name }}"
-                  class="pf-c-avatar pf-u-mr-md pf-c-avatar--navbar"
-                />
-                <div>
-                  <h2 class="pf-u-font-size-sm">{{ .Site.Data.person.name }}</h2>
-                  <h1 class="pf-u-font-size-md pf-u-font-weight-bold">
-                    {{ .Title }}
-                  </h1>
-                </div>
-              </a>
-            </div>
+                href="{{ .Site.Data.person.cv }}"
+                target="_blank"
+                rel="noopener"
+                class="pf-c-button pf-m-plain pf-u-ml-2xl pf-u-mr-md"
+              >
+                <span class="pf-c-button__icon pf-m-start">
+                  <i class="fas fa-book" aria-hidden="true"></i> </span
+                >CV</a
+              >
 
-            <div class="pf-c-page__header-tools pf-c-page__header-tools--max-width">
-              <div class="pf-c-page__header-tools-group">
-                <div class="pf-c-page__header-tools-item">
-                  <a
-                    href="{{ .Site.Data.person.cv }}"
-                    target="_blank"
-                    rel="noopener"
-                    class="pf-c-button pf-m-plain"
-                  >
-                    <span class="pf-c-button__icon pf-m-start">
-                      <i class="fas fa-book" aria-hidden="true"></i> </span
-                    >CV</a
-                  >
-                </div>
+              <div class="pf-u-mr-md">
+                {{ partial "streamstatus" (dict "ID" "youtubestatus" "Platform" "youtube" "Username" .Site.Data.person.youtube "BaseURL" .Site.BaseURL ) }}
               </div>
 
-              <div class="pf-c-page__header-tools-group">
-                <div class="pf-c-page__header-tools-item pf-u-p-md pf-u-pl-0">
-                  {{ partial "streamstatus" (dict "ID" "youtubestatus" "Platform" "youtube" "Username" .Site.Data.person.youtube "BaseURL" .Site.BaseURL ) }}
-                </div>
-
-                <div class="pf-c-page__header-tools-item pf-u-p-md pf-u-pr-0">
-                  {{ partial "streamstatus" (dict "ID" "twitchstatus" "Platform" "twitch" "Username" .Site.Data.person.twitch "BaseURL" .Site.BaseURL ) }}
-                </div>
-              </div>
+              {{ partial "streamstatus" (dict "ID" "twitchstatus" "Platform" "twitch" "Username" .Site.Data.person.twitch "BaseURL" .Site.BaseURL ) }}
             </div>
           </div>
         </header>
