--- a/layouts/index.html
+++ b/layouts/index.html
@@ -150,7 +150,7 @@
                     <a href="{{ .url }}" target="_blank" rel="noopener" class="pf-x-m-no-decoration pf-x-u-color-light-100">
                       <div class="pf-c-card pf-m-hoverable-raised pf-u-h-100" style="background: {{ safeCSS .background }}">
                         <div class="pf-c-card__header">
-                          <div class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between">
+                          <div class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm">
                             <div class="pf-c-card__title pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center">
                               <span class="pf-u-mr-sm">{{ .title }}</span>
                             </div><div class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-font-size-sm">
