--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,8 +2,7 @@
   <main class="pf-c-page__main pf-c-page__main--with-overlay pf-x-u-blur" tabindex="-1" id="main">
     {{ .Content }}
 
-
-    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0 pf-u-pb-0">
+    <section class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0 pf-u-pb-0 pf-u-pt-0 pf-u-pt-md-on-xl">
       <div class="pf-c-page__main">
         <div class="pf-l-gallery pf-m-gutter pf-l-gallery--max-350">
           {{ range .Pages }}
