--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -14,23 +14,30 @@
     </span>
   </button>
 
-  <ul class="pf-c-dropdown__menu" id="{{ .ID }}-dropdown-menu" aria-labelledby="{{ .ID }}-expanded-button" hidden>
+  <ul
+    class="pf-c-dropdown__menu"
+    id="{{ .ID }}-dropdown-menu"
+    aria-labelledby="{{ .ID }}-expanded-button"
+    hidden
+  >
     <li>
       <a
         class="pf-c-dropdown__menu-item"
         href="{{ .Mastodon }}"
         target="_blank"
         rel="noopener"
-      >Mastodon</a>
+        >Mastodon</a
+      >
     </li>
-  
+
     <li>
       <a
         class="pf-c-dropdown__menu-item"
         href="https://instagram.com/{{ .Instagram }}"
         target="_blank"
         rel="noopener"
-      >Instagram</a>
+        >Instagram</a
+      >
     </li>
 
     <li class="pf-c-divider" role="separator"></li>
@@ -41,32 +48,40 @@
         href="https://matrix.to/#/{{ .Matrix }}"
         target="_blank"
         rel="noopener"
-      >Matrix</a>
+        >Matrix</a
+      >
     </li>
-  
+
     <li>
       <a
         class="pf-c-dropdown__menu-item"
         href="https://signal.me/#p/{{ .Signal }}"
         target="_blank"
         rel="noopener"
-      >Signal</a>
-    </li> 
-  
+        >Signal</a
+      >
+    </li>
+
     <li class="pf-c-divider" role="separator"></li>
 
     <li>
-      <a class="pf-c-dropdown__menu-item" href="tel:{{ .Phone }}" rel="noopener">Phone</a>
+      <a class="pf-c-dropdown__menu-item" href="tel:{{ .Phone }}" rel="noopener"
+        >Phone</a
+      >
     </li>
 
     <li>
-      <a class="pf-c-dropdown__menu-item" href="mailto:{{ .Mail }}" rel="noopener">Mail</a>
+      <a
+        class="pf-c-dropdown__menu-item"
+        href="mailto:{{ .Mail }}"
+        rel="noopener"
+        >Mail</a
+      >
     </li>
   </ul>
 </div>
 
-<noscript
-  >Please enable JavaScript to view the contact menu.</noscript
+<noscript>Please enable JavaScript to view the contact menu.</noscript
 ><script type="module">
 const expandedButton = document.getElementById("{{ .ID }}-expanded-button");
 const dropdownMenu = document.getElementById("{{ .ID }}-dropdown-menu");
