feat: Add Mastodon verification backlink

--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -25,7 +25,7 @@
         class="pf-c-dropdown__menu-item"
         href="{{ .Mastodon }}"
         target="_blank"
-        rel="noopener"
+        rel="me noopener"
         >Mastodon</a
       >
     </li>
