--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -1,4 +1,4 @@
-<div class="pf-c-card pf-c-card--overlay" id="{{ .ID }}">
+<div class="pf-c-card pf-c-card--overlay pf-c-card--lastcommit" id="{{ .ID }}">
   <div class="pf-c-card__body pf-u-p-0 pf-u-display-flex">
     <img
       src="/img/octocat.svg"
