--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -1,4 +1,7 @@
-<div class="pf-c-card" id="{{ .ID }}">
+<div
+  class="pf-c-card pf-c-card--full-width pf-c-card--transparent"
+  id="{{ .ID }}"
+>
   <div
     class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-py-xl"
   >
