--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
       class="pf-c-page__main-section pf-m-fill pf-x-u-transparent pf-c-page__main-section--max-width pf-u-px-0 pf-u-pb-0 pf-u-pt-0 pf-u-pt-md-on-xl"
     >
       <div class="pf-c-page__main pf-c-content">
-        <div class="pf-c-card">
+        <div class="pf-c-card pf-c-card--full-width-lg">
           <div class="pf-c-card__body">
             {{ .Content }}
           </div>
