--- a/layouts/index.html
+++ b/layouts/index.html
@@ -166,7 +166,7 @@
           <div
             class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-u-pt-0 pf-u-pb-0 pf-u-px-0"
           >
-            <span class="pf-x-u-text-shadow-sm">Projects</span>
+            <h2 class="pf-x-u-text-shadow-sm">Projects</h2>
           </div>
           <div class="pf-c-card__body pf-u-px-0 pf-u-pb-0">
             <ul>
